--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,6 +22,8 @@ $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
+$brown-color:         #A6453C !default;
+$azure-color:         #034AA6 !default;
 
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
